--- a/styles/style.css
+++ b/styles/style.css
@@ -154,6 +154,7 @@
   src: url("./cooper/cooperhewitt-lightitalic-webfont.woff2") format("woff2"), url("./cooper/cooperhewitt-lightitalic-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -162,6 +163,15 @@
   src: url("./icomoon/fonts/icomoon.eot?jvlpx6#iefix") format("embedded-opentype"), url("./icomoon/fonts/icomoon.ttf?jvlpx6") format("truetype"), url("./icomoon/fonts/icomoon.woff?jvlpx6") format("woff"), url("./icomoon/fonts/icomoon.svg?jvlpx6#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Nunito Sans';
+  src: url("./nunito/fonts/nunitosans-bold-webfont.woff2") format("woff2"), url("./nunito/fonts/nunitosans-bold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
 [class^="icon-"], [class*=" icon-"] {
