--- a/styles/style.css
+++ b/styles/style.css
@@ -736,6 +736,12 @@ aside ul li {
   line-height: 1.2rem;
   font-size: 0.8rem;
   font-size: calc(1.1rem * 0.8);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 aside h2:last-of-type {
