--- a/styles/style.scss
+++ b/styles/style.scss
@@ -544,6 +544,8 @@ aside{
      
       font-size: 0.8rem;
       font-size: calc(#{$bookTitleFontSize} * 0.8);
+      display:flex;
+      align-items: center;
       }
     }
    h2:last-of-type{padding-top: 1rem;}
