--- a/styles/style.scss
+++ b/styles/style.scss
@@ -217,14 +217,14 @@ $padding576: 6%;
   
 
 
-  @font-face {
-    font-family: 'Nunito Sans';
-    src: url('./nunito/fonts/nunitosans-bold-webfont.woff2') format('woff2'),
-         url('./nunito/fonts/nunitosans-bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
+//   @font-face {
+//     font-family: 'Nunito Sans';
+//     src: url('./nunito/fonts/nunitosans-bold-webfont.woff2') format('woff2'),
+//          url('./nunito/fonts/nunitosans-bold-webfont.woff') format('woff');
+//     font-weight: normal;
+//     font-style: normal;
+//     font-display: swap;
+// }
 
 
 
@@ -262,7 +262,6 @@ $padding576: 6%;
   }
   /*Modal with small image */
   .myModal{
-    //display: none;
     position: fixed;
     z-index: 100;
     left: 0;
