--- a/styles/nunito/stylesheet.css
+++ b/styles/nunito/stylesheet.css
@@ -3,7 +3,7 @@
 
 
 @font-face {
-    font-family: 'nunito_sansbold';
+    font-family: 'Nunito Sans';
     src: url('nunitosans-bold-webfont.woff2') format('woff2'),
          url('nunitosans-bold-webfont.woff') format('woff');
     font-weight: normal;
