--- a/styles/style.css
+++ b/styles/style.css
@@ -778,6 +778,10 @@ aside h2:last-of-type {
   }
 }
 
+aside #textInput li {
+  margin-bottom: 0.5rem;
+}
+
 .queryForm__pageLimit {
   display: -ms-grid;
   display: grid;
