--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -202,6 +202,26 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-animation: modal-intro 0.5s ease-in-out;
+          animation: modal-intro 0.5s ease-in-out;
+}
+
+@-webkit-keyframes modal-intro {
+  from {
+    opacity: 0%;
+  }
+  to {
+    opacity: 100%;
+  }
+}
+
+@keyframes modal-intro {
+  from {
+    opacity: 0%;
+  }
+  to {
+    opacity: 100%;
+  }
 }
 
 .myModal__content {
